[package]
name = "stripe-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
axum = "0.5.15"
once_cell = "1.13.1"
redis = { version = "0.21.6", features = ["tokio-comp"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
toml = "0.5.9"
